--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -69,6 +69,10 @@
     </div>
   </header>
 
+  <ng-content
+    select="[pre-content]"
+></ng-content>
+
   <!-- Content -->
   <main
     class="content">
