--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -8,8 +8,7 @@
   .tags {
     display: flex;
     flex-wrap: nowrap;
-    padding: 12px 0;
-    margin-right: -24px; // todo
+    padding: 12px 0 12px 24px;
     overflow-x: auto;
   }
 
