--- a/lib/src/components/containers/what_container/what_container.html
+++ b/lib/src/components/containers/what_container/what_container.html
@@ -4,15 +4,35 @@
   <div
     content>
 
-    <div>
-      <button 
-        cf-button
-        (click)="goto('about')">О нас</button>
-      <button 
-        cf-button
-        (click)="goto('release_notes')">Релизы</button>
-    </div>
+    <tabs
+      role="tablist"
+      aria-orientation="horizontal">
 
-    <router-outlet [routes]="Routes.all"></router-outlet>
+      <button
+        role="tab"
+        (click)="goto('about')"
+        class="tabs__button tabs__button--active">
+
+        <span
+          class="tabs__button-text">
+          О нас
+        </span>
+      </button>
+
+      <button
+        role="tab"
+        (click)="goto('release_notes')"
+        class="tabs__button">
+
+        <span
+          class="tabs__button-text">
+          Релизы
+        </span>
+      </button>
+    </tabs>
+
+    <router-outlet
+      [routes]="Routes.all">
+    </router-outlet>
   </div>
 </layout>
