--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -20,13 +20,32 @@
       pre-content
       class="tags">
 
-      <button
-        cf-button
+      <!-- Buttons group -->
+      <div
         (click)="onShowAllClick()"
-        [class.button-primary]="isShowAllVisible"
-        class="tags__item button-tag">
-        Все
-      </button>
+        [class.buttons-group--selected]="isShowAllVisible"
+        class="tags__item buttons-group">
+
+        <!-- Filters -->
+        <button
+          cf-button
+          class="button-tag button-icon-only">
+
+          <svg
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24"
+            class="button-icon">
+            <path d="M5 6h14a1 1 0 0 1 0 2H5a1 1 0 1 1 0-2zm3 5h8a1 1 0 0 1 0 2H8a1 1 0 0 1 0-2zm3 5h2a1 1 0 0 1 0 2h-2a1 1 0 0 1 0-2z" fill-rule="evenodd"/>
+          </svg>
+        </button>
+
+        <!-- All -->
+        <button
+          cf-button
+          class="button-tag">
+          Все
+        </button>
+      </div>
 
       <button
         cf-button
