--- a/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
+++ b/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
@@ -18,24 +18,12 @@
   </material-button>
 </template>
 
-<template
-  [ngIf]="!isSearchMode">
+<material-button
+  *ngIf="!isSearchMode"
+  icon
+  (click)="onSearchModeEnable()">
 
-  <material-button
-    icon
-    (click)="onFilterClick()">
-
-    <material-icon
-      icon="filter_list">
-    </material-icon>
-  </material-button>
-
-  <material-button
-    icon
-    (click)="onSearchModeEnable()">
-
-    <material-icon
-      icon="search">
-    </material-icon>
-  </material-button>
-</template>
+  <material-icon
+    icon="search">
+  </material-icon>
+</material-button>
