rating empty state

--- a/lib/src/components/containers/rating_container/rating_container.html
+++ b/lib/src/components/containers/rating_container/rating_container.html
@@ -9,5 +9,9 @@
 
       {{ lecture.title }}
     </div>
+
+    <rating-empty-state
+      *ngIf="lectures.isEmpty">
+    </rating-empty-state>
   </div>
 </layout>
