logout menu item

--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -2,7 +2,8 @@
   [isReady]="isReady">
 
   <layout
-    [title]="'Расписание'">
+    [title]="'Расписание'"
+    [state]="state">
 
     <!-- Actions -->
     <layout-actions
