--- a/lib/src/components/containers/welcome_container/welcome_container.scss
+++ b/lib/src/components/containers/welcome_container/welcome_container.scss
@@ -6,6 +6,7 @@
   height: 100%;
   overflow-y: auto;
   position: relative;
+  -webkit-overflow-scrolling: touch;
 
   .welcome__wrapper {
     min-height: 100%;
@@ -47,6 +48,11 @@
     font-size: $font-heading-3-size; // todo
     line-height: $font-heading-3-line-height; // todo
     color: $fg-color-secondary; // todo
+  }
+
+  .welcome__description-icon {
+    transform: translateY(3px);
+    color: $font-color-main;
   }
 
   .welcome__sections {
