--- a/lib/src/components/containers/lecture_container/lecture_container.html
+++ b/lib/src/components/containers/lecture_container/lecture_container.html
@@ -181,7 +181,7 @@
 
         <p
           class="event__vote-description">
-          Wrike наградит лучшего докладчика iPhone&nbsp;X
+          Wrike наградит лучшего докладчика
         </p>
         <button
           cf-button
