--- a/lib/src/components/containers/sections_container/sections_container.html
+++ b/lib/src/components/containers/sections_container/sections_container.html
@@ -25,7 +25,8 @@
       {{ selectedSectionCount }}
 
       <sections
-        [sections]="sections"
+        [mainSections]="mainSections"
+        [customSections]="customSections"
         [selectedSectionIds]="selectedSectionIds"
         (onSectionsChange)="onSectionsChange($event)">
       </sections>
