--- a/lib/src/components/containers/welcome_container/welcome_container.html
+++ b/lib/src/components/containers/welcome_container/welcome_container.html
@@ -6,7 +6,8 @@
   </div>
 
   <sections
-    [sections]="sections"
+    [mainSections]="mainSections"
+    [customSections]="customSections"
     [selectedSectionIds]="selectedSectionIds"
     (onSectionsChange)="onSectionsChange($event)">
   </sections>
