--- a/lib/src/components/sections/sections.html
+++ b/lib/src/components/sections/sections.html
@@ -3,14 +3,30 @@
 
   <h2
     class="sections__group-title">
-    Title here
+    Секции
   </h2>
 
   <div
     class="sections__grid">
 
     <cf-section
-      *ngFor="let section of sections"
+      *ngFor="let section of mainSections"
+      (change)="onSectionClick(section)"
+      [title]="section.title"
+      [isChecked]="isSectionSelected(section)">
+    </cf-section>
+  </div>
+
+  <h2
+    class="sections__group-title">
+    События
+  </h2>
+
+  <div
+    class="sections__grid">
+
+    <cf-section
+      *ngFor="let section of customSections"
       (change)="onSectionClick(section)"
       [title]="section.title"
       [isChecked]="isSectionSelected(section)">
