--- a/lib/src/components/containers/release_notes_container/release_notes_container.html
+++ b/lib/src/components/containers/release_notes_container/release_notes_container.html
@@ -1,1 +1,14 @@
-Пока ничего...
+<div
+		*ngFor="let release of releases">
+
+	<div>{{release.version}}</div>
+	<div>{{release.title}}</div>
+	<div
+			[innerHTML]="release.description">
+	</div>
+	<div>
+		<img [src]="release.avatar"/>
+	</div>
+	<div>{{release.author}}</div>
+	<div>{{release.company}}</div>
+</div>
