filters: transclude selected sections count into app header

--- a/lib/src/components/containers/sections_container/sections_container.html
+++ b/lib/src/components/containers/sections_container/sections_container.html
@@ -19,10 +19,11 @@
       </material-button>
     </div>
 
+    <span
+      badge>{{ selectedSectionCount }}</span>
+
     <div
       content>
-
-      {{ selectedSectionCount }}
 
       <sections
         [mainSections]="mainSections"
