--- a/lib/src/components/layout/layout.scss
+++ b/lib/src/components/layout/layout.scss
@@ -1,3 +1,5 @@
+@import "../../../../web/assets/styles/variables.scss";
+
 :host {
   display: block;
   height: 100%;
@@ -7,6 +9,10 @@
     display: grid;
     grid-template-rows: [header] auto [pre-content] auto [content] 1fr;
     height: 100%;
+  }
+
+  .badge {
+    color: $fg-color-secondary
   }
 
   .content {
