--- a/lib/src/components/containers/about_container/about_container.html
+++ b/lib/src/components/containers/about_container/about_container.html
@@ -1,27 +1,26 @@
 <div
-  class="about__logos" 
+  class="about__logos"
   aria-hidden="true">
   <img
-    src="assets/images/about/codefest.png" 
-    width="34" 
+    src="assets/images/about/codefest.png"
+    width="34"
     height="48" />
-  <svg 
-    class="cross" 
-    viewBox="0 0 25 25" 
-    width="25" 
+  <svg
+    class="cross"
+    viewBox="0 0 25 25"
+    width="25"
     height="25">
       <path d="M 2,2 L 23,23 M 23,2 L 2,23" stroke="#999" />
   </svg>
   <img
-    src="assets/images/about/wrike.png" 
-    width="73" 
+    src="assets/images/about/wrike.png"
+    width="73"
     height="48" />
 </div>
 
 <p
   class="about__description">
-  Wrike и CodeFest X объединились, чтобы помочь тебе настроить свое расписание конференции. Сейчас ты видишь базовую
-  версию, давай сделаем лучше? Приходи на стенд Wrike покодить в гараже 
+  Wrike и CodeFest X объединились, чтобы помочь тебе настроить своё расписание. Сейчас ты видишь MVP версию, давай сделаем лучше? Приходи на стенд Wrike поразрабатывать в гараже
 </p>
 
 <ul
@@ -30,7 +29,7 @@
     class="about__options-item">
     <svg
       aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg" 
+      xmlns="http://www.w3.org/2000/svg"
       width="37" height="40" viewBox="0 -3 37 40">
       <g fill="none" fill-rule="evenodd">
         <path stroke="#FCDE98" d="M1 11h24v24H1z"/>
@@ -44,14 +43,14 @@
     class="about__options-item">
     <svg
       aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg" 
+      xmlns="http://www.w3.org/2000/svg"
       width="35" height="40" viewBox="0 -4 35 40">
       <g fill="none" fill-rule="evenodd">
         <path stroke="#BCB2FA" d="M17 0l16 35H1z"/>
         <path fill="#A698FC" d="M1 35V7.762l34 14.514z" opacity=".7"/>
       </g>
     </svg>
-  
+
     <div
       class="about__options-item-text">пофикси багу, которая тебя раздражает</div>
   </li>
@@ -59,7 +58,7 @@
     class="about__options-item">
     <svg
       aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg" 
+      xmlns="http://www.w3.org/2000/svg"
       width="60" height="40" viewBox="0 -16 60 40">
       <g fill="none" fill-rule="evenodd" transform="translate(0 -16)">
           <circle cx="12" cy="28" r="12" fill="#FCDE98"/>
@@ -68,7 +67,7 @@
           <circle cx="48" cy="28" r="12" fill="#FA6A67" opacity=".9"/>
       </g>
   </svg>
-  
+
     <div
       class="about__options-item-text">поделись своими безумными идеями с&nbsp;нами</div>
   </li>
