--- a/lib/src/components/containers/what_container/what_container.html
+++ b/lib/src/components/containers/what_container/what_container.html
@@ -12,7 +12,8 @@
       <button
         role="tab"
         (click)="goto('about')"
-        class="tabs__button tabs__button--active">
+        [class.tabs__button--active]="isAboutUsEnable"
+        class="tabs__button">
 
         <span
           class="tabs__button-text">
@@ -23,6 +24,7 @@
       <button
         role="tab"
         (click)="goto('release_notes')"
+        [class.tabs__button--active]="!isAboutUsEnable"
         class="tabs__button">
 
         <span
