sections: fix custom sections layout

--- a/lib/src/components/sections/sections.html
+++ b/lib/src/components/sections/sections.html
@@ -16,6 +16,10 @@
       [isChecked]="isSectionSelected(section)">
     </cf-section>
   </div>
+</section>
+
+<section
+  class="sections__group">
 
   <h2
     class="sections__group-title">
