--- a/lib/src/components/loader/loader.html
+++ b/lib/src/components/loader/loader.html
@@ -2,7 +2,11 @@
   *ngIf="!isReady"
   class="loader__content">
 
-  <material-spinner></material-spinner>
+  <div
+    class="loader__spinner">
+
+    <material-spinner></material-spinner>
+  </div>
 </div>
 
 <div
