--- a/lib/src/components/loader/loader.scss
+++ b/lib/src/components/loader/loader.scss
@@ -4,5 +4,13 @@
 
   .loader__content {
     height: 100%;
+    position: relative;
+  }
+
+  .loader__spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
