--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -15,7 +15,7 @@
     </layout-actions>
 
     <!-- Tags -->
-    <div
+    <nav
       pre-content
       *ngIf="!isSearchMode"
       class="tags">
@@ -64,7 +64,7 @@
         class="tags__item button-tag">
         {{ section.title }}
       </button>
-    </div>
+    </nav>
 
     <!-- Content -->
     <div
