--- a/lib/src/styles/common.scss
+++ b/lib/src/styles/common.scss
@@ -1,4 +1,5 @@
 @mixin info-item {
+
   .info-item {
     display: flex;
 
@@ -33,6 +34,11 @@
       width: 100%;
       object-fit: cover;
     }
+
+    .info-item__media-icon {
+      margin: auto;
+    }
+
 
     .info-item__subtitle {
       color: $fg-color-secondary;
