--- a/lib/src/components/containers/lectures_container/favorite_empty_state/favorite_empty_state.scss
+++ b/lib/src/components/containers/lectures_container/favorite_empty_state/favorite_empty_state.scss
@@ -1,13 +1,28 @@
-@import '../../../../styles/main';
-@import "../../../../../../web/assets/styles/variables.scss";
+@import '../../../../../../web/assets/styles/variables.scss';
 
 :host {
   display: block;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  color: $fg-color-secondary;
 
-  p {
-    text-align: center;
-    margin: 35px 0 0;
+  padding: 0 24px;
 
-    @include font-generator(14px, 22px);
+  .zero-state__icon {
+    margin-bottom: 8px;
+  }
+
+  .zero-state__title {
+    margin-bottom: 8px;
+    @include font-heading-2;
+  }
+
+  .zero-state__description {
+    margin-bottom: 8px;
+    @include font-paragraph-1;
   }
 }
