--- a/lib/src/components/containers/welcome_container/welcome_container.html
+++ b/lib/src/components/containers/welcome_container/welcome_container.html
@@ -30,8 +30,7 @@
           &ngsp;
 
           <svg
-            xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"
-            class="welcome__description-icon">
+            class="welcome__description-icon"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="14" height="14" viewBox="0 0 24 24">
             <path d="M5 6h14a1 1 0 0 1 0 2H5a1 1 0 1 1 0-2zm3 5h8a1 1 0 0 1 0 2H8a1 1 0 0 1 0-2zm3 5h2a1 1 0 0 1 0 2h-2a1 1 0 0 1 0-2z" fill-rule="evenodd"/>
