--- a/web/assets/styles/variables.scss
+++ b/web/assets/styles/variables.scss
@@ -58,6 +58,10 @@ $font-weight-bold: 600;
   @include font-generator($font-size-main, $font-line-height-main);
 }
 
+@mixin font-paragraph-1 {
+  @include font-generator($font-heading-3-size, $font-heading-3-line-height);
+}
+
 @mixin user-select($selection) {
   -webkit-user-select: $selection;
   -moz-user-select: $selection;
