--- a/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
+++ b/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
@@ -6,7 +6,8 @@
     [value]="searchText"
     [isAutoFocused]="true"
     (keyup)="onSearchTextChange($event)"
-    type="text">
+    type="text"
+    class="search">
 
   <material-button
     icon
