update section titles

--- a/lib/src/components/containers/about_container/about_container.html
+++ b/lib/src/components/containers/about_container/about_container.html
@@ -20,7 +20,8 @@
 
 <p
 		class="about__description">
-	Wrike и CodeFest X объединились, чтобы помочь тебе настроить своё расписание. Сейчас ты видишь MVP версию, давай сделаем лучше? Приходи на стенд Wrike поразрабатывать в гараже
+	Wrike и CodeFest X объединились, чтобы помочь тебе настроить своё расписание. Сейчас ты видишь MVP версию,
+	давай сделаем лучше? Приходи на стенд Wrike - поработай в гараже
 </p>
 
 <ul
@@ -83,5 +84,5 @@
 </p>
 
 <p class="about__github">
-	<a href="https://github.com/wrike/codefestx" target="_blank">https://github.com/wrike/codefestx</a>
+	cделай PR <a href="https://github.com/wrike/codefestx" target="_blank">https://github.com/wrike/codefestx</a>
 </p>
