--- a/lib/src/components/sections/sections.html
+++ b/lib/src/components/sections/sections.html
@@ -3,7 +3,7 @@
 
   <h2
     class="sections__group-title">
-    Секции
+    Послушать
   </h2>
 
   <div
@@ -23,7 +23,7 @@
 
   <h2
     class="sections__group-title">
-    События
+    Для общения
   </h2>
 
   <div
