--- a/lib/src/components/containers/lectures_container/favorite_empty_state/favorite_empty_state.html
+++ b/lib/src/components/containers/lectures_container/favorite_empty_state/favorite_empty_state.html
@@ -1,1 +1,3 @@
-Пока ничего нет. Жми звезду -- создавай свой CodeFestX
+<p>Пока ничего нет.</p>
+<p>Но это легко исправить.</p>
+<p>Жми звезду и создавай свой CodeFest X.</p>
