--- a/lib/src/components/containers/release_notes_container/release_notes_container.scss
+++ b/lib/src/components/containers/release_notes_container/release_notes_container.scss
@@ -1,5 +1,8 @@
 :host {
-  img {
-    width: 50px;
+  ::ng-deep .event {
+    margin-right: -16px;
+  }
+  ::ng-deep .event + .event {
+    margin-top: 8px;
   }
 }
