Modify search logic

--- a/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
+++ b/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
@@ -5,6 +5,7 @@
     text-input
     [value]="searchText"
     [isAutoFocused]="true"
+    (change)="onSearchTextChange($event)"
     (keyup)="onSearchTextChange($event)"
     type="text"
     class="search">
