--- a/lib/src/components/containers/welcome_container/welcome_container.html
+++ b/lib/src/components/containers/welcome_container/welcome_container.html
@@ -40,9 +40,10 @@
 
       <sections
         [mainSections]="mainSections"
-        [customSections]="customSections"
+        [isCustomSectionMode]="isCustomSectionMode"
         [selectedSectionIds]="selectedSectionIds"
         (onSectionsChange)="onSectionsChange($event)"
+        (onCustomSectionModeChange)="onCustomSectionModeChange($event)"
         class="welcome__sections">
       </sections>
 
