Fix search events

--- a/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
+++ b/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
@@ -3,10 +3,11 @@
 
   <input
     text-input
+    #searchInput
     [value]="searchText"
     [isAutoFocused]="true"
-    (change)="onSearchTextChange($event)"
-    (keyup)="onSearchTextChange($event)"
+    (change)="onSearchTextChange(searchInput.value)"
+    (keyup)="onSearchTextChange(searchInput.value)"
     type="text"
     class="search">
 
